<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="Plant_CTRL" Id="{91e15970-03be-41be-84ab-f9d13beb396e}">
    <Declaration><![CDATA[TYPE Plant_CTRL :
STRUCT
	bAuto : BOOL;
	bMAnual : BOOL;
	
	bStart : BOOL;
	bStop : BOOL;
	bReset : BOOL;
	bEmgStop : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>